# graph-rag

./: .gitignore  important_keywords.csv  neo4j_hybrid_search.ipynb  predict.py  pyproject.toml  questions_and_answers.csv  temp.py  todo.md
artifacts/: evals_data.json  hive_qa.csv  questions.txt  questions_and_answers.csv  questions_and_answers_v2.csv
artifacts/response_dumps/: question_1.json  question_10.json  question_11.json  question_12.json  question_13.json  question_14.json  question_15.json  question_16.json  question_17.json  question_18.json  question_19.json  question_2.json  question_20.json  question_21.json  question_22.json  question_23.json  question_24.json  question_25.json  question_26.json  question_27.json  question_28.json  question_29.json  question_3.json  question_30.json  question_31.json  question_32.json  question_33.json  question_34.json  question_35.json  question_36.json  question_37.json  question_38.json  question_39.json  question_4.json  question_40.json  question_41.json  question_42.json  question_43.json  question_44.json  question_45.json  (+34 more)
artifacts/response_dumps_v2/: question_1.json  question_10.json  question_11.json  question_12.json  question_13.json  question_14.json  question_15.json  question_16.json  question_17.json  question_18.json  question_19.json  question_2.json  question_20.json  question_21.json  question_22.json  question_23.json  question_24.json  (+54 more)
evals/: do_evals.py
util_scripts/: csv_from_hive.py  extract_questions_from_evals_data.py  graphrag_qna_to_json.py  hive_qna_to_json.py  load_golden.py
(+93 files in other folders)
