[project]
name = "graphrag-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vedmani", email = "vedmani.vaidya@nitorinfotech.com" }
]
requires-python = ">=3.11"
dependencies = [
    "llama-index-graph-stores-neo4j>=0.4.0",
    "llama-index>=0.12.2",
    "llama-index-llms-azure-openai>=0.3.0",
    "llama-index-embeddings-azure-openai>=0.3.0",
    "jupyterlab>=4.3.1",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.2",
    "pandas>=2.2.3",
    "nltk>=3.9.1",
    "llama-index-llms-gemini>=0.4.0",
    "llama-index-embeddings-gemini>=0.3.0",
    "ipywidgets>=8.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
